Fixes too small default logo on speaker view

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -62,5 +62,5 @@ p.item-long-description, p.item-short-description {
 
 /* Person view symbol */
 .speaker-view-icon {
-    font-size:3em; margin-left:auto; margin-right: auto;
+    font-size:8em; margin-left:auto; margin-right: auto;
 }
